AC_INIT(src/merge/mkvmerge.cpp)
AC_PREREQ(2.50)

AC_CONFIG_HEADERS(config.h:config.h.in)

PACKAGE="mkvtoolnix"
VERSION="5.0.1"
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

dnl Optional features that are built and those that aren't
opt_features_yes=""
opt_features_no=""

m4_include(ac/initialization.m4)
m4_include(ac/check_version.m4)
m4_include(ac/gcc_version.m4)
m4_include(ac/endianess.m4)
m4_include(ac/mingw.m4)
m4_include(ac/extra_inc_lib.m4)
m4_include(ac/debugging_profiling.m4)
m4_include(ac/precompiled_headers.m4)
m4_include(ac/build_timestamp_in_version.m4)
m4_include(ac/inttypes.m4)
m4_include(ac/pri64d.m4)
m4_include(ac/posix_fadvise.m4)
m4_include(ac/iconv.m4)
m4_include(ac/nl_langinfo.m4)
m4_include(ac/ogg.m4)
m4_include(ac/vorbis.m4)
m4_include(ac/flac.m4)
m4_include(ac/ebml.m4)
m4_include(ac/matroska.m4)
dnl m4_include(ac/ebml_matroska_internal.m4)
m4_include(ac/expat.m4)
m4_include(ac/zlib.m4)
m4_include(ac/lzo.m4)
m4_include(ac/bz.m4)
m4_include(ac/wxwidgets.m4)
m4_include(ac/qt4.m4)
m4_include(ac/magic.m4)
m4_include(ac/curl.m4)
m4_include(ac/ax_boost_base.m4)
m4_include(ac/ax_boost_check_headers.m4)
m4_include(ac/ax_boost_filesystem.m4)
m4_include(ac/ax_boost_property_tree.m4)
m4_include(ac/ax_boost_regex.m4)
m4_include(ac/ax_boost_system.m4)
m4_include(ac/boost.m4)
m4_include(ac/etags.m4)
m4_include(ac/pandoc.m4)
m4_include(ac/ax_docbook.m4)
m4_include(ac/tiocgwinsz.m4)
m4_include(ac/po4a.m4)
m4_include(ac/translations.m4)
m4_include(ac/manpages_translations.m4)
m4_include(ac/guide_translations.m4)

AC_OUTPUT(build-config)

echo ''
echo 'The mkvtoolnix configuration is complete.'
printf 'Optional features that are built: '"$opt_features_yes"'\n'
printf 'Optional features that are NOT built: '"$opt_features_no"'\n'
